new commit von Georgios

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -38,6 +38,14 @@ a {
     color: black;
 }
 
+main div {
+    width: 200px;
+    height: 200px;
+    border: 2px solid black;
+    display: flex;
+    justify-content: center;
+    margin-inline: auto;
+}
 
 
 
