--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,51 +1,49 @@
+@import url(components/darkmode-toggle.css);
+
 body {
-    width: 100vw;
-    height: 100vh;
-    box-sizing:border-box;
-    margin:0;
-    padding: 0;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+  width: 100vw;
+  height: 100vh;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 #fixedHeader {
-    position: fixed;
-    background-color: orange;
-    width: 100vw;
-    padding: 10px;
-    text-align: center;
-    z-index: 1;
-    top: 0;
+  position: fixed;
+  background-color: orange;
+  width: 100vw;
+  padding: 10px;
+  text-align: center;
+  z-index: 1;
+  top: 0;
 }
 
-#fixedFooter{
-    width: 100vw;
-    bottom: 0;
-    position: fixed;
-    z-index: 1;
-    background-color: aqua;
+#fixedFooter {
+  width: 100vw;
+  bottom: 0;
+  position: fixed;
+  z-index: 1;
+  background-color: aqua;
 }
 
 nav ul {
-    list-style-type: none;
-    display: flex;
-    font-size: 30px;
-    justify-content: space-around;
-
+  list-style-type: none;
+  display: flex;
+  font-size: 30px;
+  justify-content: space-around;
 }
 
 a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 
 main div {
-    width: 200px;
-    height: 200px;
-    border: 2px solid black;
-    display: flex;
-    justify-content: center;
-    margin-inline: auto;
+  width: 200px;
+  height: 200px;
+  border: 2px solid black;
+  display: flex;
+  justify-content: center;
+  margin-inline: auto;
 }
-
-
-
