--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,51 +1,84 @@
 body {
-    width: 100vw;
-    height: 100vh;
-    box-sizing:border-box;
-    margin:0;
-    padding: 0;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+  width: 100vw;
+  height: 115vh;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 #fixedHeader {
-    position: fixed;
-    background-color: orange;
-    width: 100vw;
-    padding: 10px;
-    text-align: center;
-    z-index: 1;
-    top: 0;
+  position: fixed;
+  background-color: orange;
+  width: 100vw;
+  padding: 10px;
+  text-align: center;
+  z-index: 1;
+  top: 0;
 }
 
-#fixedFooter{
-    width: 100vw;
-    bottom: 0;
-    position: fixed;
-    z-index: 1;
-    background-color: aqua;
+#fixedFooter {
+  width: 100vw;
+  bottom: 0;
+  position: fixed;
+  z-index: 1;
+  background-color: aqua;
 }
 
 nav ul {
-    list-style-type: none;
-    display: flex;
-    font-size: 30px;
-    justify-content: space-around;
-
+  list-style-type: none;
+  display: flex;
+  font-size: 30px;
+  justify-content: space-around;
 }
 
 a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 
 main div {
-    width: 200px;
-    height: 200px;
-    border: 2px solid black;
-    display: flex;
-    justify-content: center;
-    margin-inline: auto;
+  width: 300px;
+  height: 229px;
+  border: 2px solid black;
+  display: flex;
+  justify-content: center;
+  margin-inline: auto;
+  align-items: center;
+  flex-direction: column;
 }
-
-
-
+.Showanswer {
+  height: 40px;
+  width: 200px;
+  cursor: pointer;
+  font-size: 16px;
+  border-radius: 8px 8px;
+  transition-duration: 1s;
+  background-color: orange;
+  border: 5px solid skyblue;
+  color: whitesmoke;
+}
+.Showanswer:hover {
+  font-size: 17px;
+  width: 210px;
+  box-shadow: 4px 4px 4px 4px goldenrod;
+}
+.Categories {
+  align-self: flex-start;
+  width: 70px;
+  background-color: #2965f1;
+  color: white;
+  cursor: pointer;
+}
+#Button_Option1,
+#Button_Option2,
+#Button_Option3 {
+  margin-top: 15px;
+  color: white;
+  background-color: #f06529;
+}
+.Bookmarks {
+  align-self: flex-end;
+  margin-top: -8px;
+  margin-right: 20px;
+}
