--- a/CSS/style.css
+++ b/CSS/style.css
@@ -25,7 +25,7 @@ h1 {
   position: fixed;
   background-color: var(--accent-color);
   width: 100vw;
-  height: 80px;
+  height: 60px;
   /*padding-top: 5px;*/
   text-align: center;
   z-index: 1;
@@ -36,6 +36,7 @@ h1 {
   width: 100vw;
   bottom: 0;
   height: 80px;
+  padding-bottom: 4vh;
   position: fixed;
   z-index: 1;
   background-color: var(--accent-color);
@@ -117,9 +118,9 @@ main div {
   text-align: center;
 }
 
-.quatsch {
-  border: #f06529;
-  background-color: blue;
-  width: 300px;
-  height: 300px;
+.icon {
+  width: 30px;
+  padding: 20px;
+  background-color: var(--bg-color);
+  border-radius: 100%;
 }
