--- a/CSS/style.css
+++ b/CSS/style.css
@@ -108,10 +108,17 @@ main div {
   color: white;
   background-color: #f06529;
 }
-.Bookmarks {
+.bookmarks_unclicked {
   align-self: flex-end;
   margin-top: -8px;
   margin-right: 20px;
+  width: 30px;
+}
+.bookmarks_clicked {
+  align-self: flex-end;
+  margin-top: -8px;
+  margin-right: 20px;
+  width: 30px;
 }
 
 .text {
